# Meta_hackethon

./: Dockerfile  PROJECT_DETAILS.md  README.md  __init__.py  client.py  inference.py  inference_output.txt  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  mediaops_environment.py  my_env_name_environment.py
